# rpg-guerrilha-urbana-back

./: .gitignore  .vercelignore  config.py  config.yaml  main.py  pyproject.toml  utils.py  vercel.json
book/: alta burguesia brasileira.md  fontes variadas e desorganizadas.md  livros recomendados por Marighella.md
book/02 - definição do guerrilheiro urbano/: Ficha do guerrilheiro urbano.md  definição do guerrilheiro urbano.md
book/citações/: inimigos do povo.md
fastapi/: config.py  config.yaml  main.py  pyproject.toml  server.py  utils.py
fastapi/book/: Manual do Guerrilheiro Urbano.md  alta burguesia brasileira.md  fontes variadas e desorganizadas.md  livros recomendados por Marighella.md
fastapi/book/01 - intro/: intro.md
fastapi/book/02 - definição do guerrilheiro urbano/: Ficha do guerrilheiro urbano.md  definição do guerrilheiro urbano.md
fastapi/book/citações/: inimigos do povo.md
fastapi/routes/: graph.py  health.py  notes.py
fastapi/templates/: index.html
routes/: graph.py  health.py  notes.py
templates/: index.html
